<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                style="@style/secondaryBackground"
                tools:context="android.bignerdranch.com.mobilemidwife.MidwifeRegisterActivity">





    <TextView
        android:layout_marginTop="95dp"
        android:layout_marginBottom="24dp"
        android:text="@string/createaccount"
        android:id="@+id/createaccount"


        style="@style/headingorange"/>


    <LinearLayout
        android:id="@+id/practicename"
        android:layout_below="@+id/createaccount"
        android:layout_marginTop="24dp"
        style="@style/inputbackground">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textSize="20sp"
            android:textColorHint="#1C7995"
            android:id="@+id/enterpracticename"
            android:hint="@string/practicename"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/primarycontactname"
        android:layout_below="@+id/practicename"
        android:layout_marginTop="24dp"
        style="@style/inputbackground">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textSize="20sp"
            android:textColorHint="#1C7995"
            android:id="@+id/primarycontactnameField"

            android:hint="@string/primarycontact"

            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/createPracticeEmail"
        android:layout_below="@+id/primarycontactname"
        android:layout_marginTop="24dp"
        style="@style/inputbackground">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:textSize="20sp"
            android:textColorHint="#1C7995"
            android:id="@+id/createPracticeEmailEmailfield"
            android:layout_below="@+id/createpasswordfield"
            android:hint="@string/createPracticeEmail"

            />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/createPracticePassword"
        android:layout_below="@+id/createPracticeEmail"
        android:layout_marginTop="24dp"
        style="@style/inputbackground">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textSize="20sp"
            android:textColorHint="#1C7995"
            android:id="@+id/createmidwifepasswordfield"
            android:layout_below="@+id/createusernamefield"
            android:hint="@string/createpassword"

            />


    </LinearLayout>

    <Button
        android:text="@string/create"
        android:id="@+id/createmidwife"
        android:layout_below="@id/createPracticePassword"
        style="@style/roundorangebutton"/>




</RelativeLayout>


