<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/appbackground"
                tools:context=".MainActivity">




    <ImageView
        android:id="@+id/test_image"
        android:src="@drawable/mobilethemidwife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        />

<ImageView
        android:id="@+id/subtitle"
        android:src="@drawable/logotitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/test_image"
        android:layout_marginTop="20dp"
/>


    <LinearLayout
    android:id="@+id/signin"
    android:layout_below="@+id/subtitle"
    android:layout_marginTop="24dp"
    style="@style/inputbackground"
    >

        <EditText
            android:id="@+id/usernameField"



            android:hint="@string/usernameField"


            style="@style/inputtext"/>

</LinearLayout>

    <LinearLayout
        android:id="@+id/password"
        android:layout_below="@+id/signin"
        android:layout_marginTop="24dp"
        style="@style/inputbackground">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textSize="20sp"
            android:textColorHint="#1C7995"
            android:id="@+id/passwordfield"
            android:layout_below="@+id/usernameField"
            android:hint="@string/enter_pasword"


            />


    </LinearLayout>


    

    
    <Button
        android:text="@string/LoginButton"
        android:id="@+id/login"
        style="@style/roundorangebutton"/>


    <TextView
        android:layout_marginTop="25dp"
        android:text="@string/RegisterTitle"
        android:id="@+id/register"
        android:layout_below="@id/login"
        style="@style/LinkBlue"/>

</RelativeLayout>
